Fixed a regression where "Auto-update this feed" had no effect.

--- a/ubiquity/chrome/content/confirm-add-command.xhtml
+++ b/ubiquity/chrome/content/confirm-add-command.xhtml
@@ -71,11 +71,15 @@
       </p>
 
       <p>
-        <input type="submit" value="&ubiquity.confirmsubscription.ButtonTextDenyCommand;" onclick="onCancel();"/>
+        <input type="submit"
+          value="&ubiquity.confirmsubscription.ButtonTextDenyCommand;"
+          onclick="onCancel();"/>
         &nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="submit" value="&ubiquity.confirmsubscription.ButtonTextAcceptCommand;" onclick="onSubmit();"/>
+        <input id="submit" type="submit"
+          value="&ubiquity.confirmsubscription.ButtonTextAcceptCommand;"
+          onclick="onSubmit();"
+          disabled="disabled"/>
       </p>
-
     </div>
   </div>
 </div>
