preview.html: Specified title for DOM Inspector friendliness.

--- a/ubiquity/preview.html
+++ b/ubiquity/preview.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title></title>
-  <meta charset="UTF-8"/>
+<meta charset="UTF-8"/>
+<title>Ubiquity Preview</title>
 </head>
 <body></body>
