PrefKeys: Now a module. Added prefs for repeat-last-command.

--- a/ubiquity/chrome/content/about.xhtml
+++ b/ubiquity/chrome/content/about.xhtml
@@ -11,7 +11,6 @@
 ]>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
-
 <head>
   <title>&ubiquity.pagetitle.About;</title>
 
@@ -20,13 +19,14 @@
   <link rel="stylesheet" type="text/css" media="all" href="web-content.css" />
   <link rel="icon" type="image/x-icon" id="favicon" href="chrome://ubiquity/skin/icons/favicon.ico" />
 
-  <script type="text/javascript" src="resource://ubiquity/scripts/jquery.js"></script>
-  <script type="application/javascript;version=1.8" src="chrome://ubiquity/content/header.js"></script>
-  <script type="application/javascript;version=1.8" src="chrome://ubiquity/content/tutorial.js"></script>
-  <script type="text/javascript" src="prefkeys.js"></script>
+  <script type="text/javascript"
+    src="resource://ubiquity/scripts/jquery.js"></script>
+  <script type="application/javascript;version=1.8"
+    src="chrome://ubiquity/content/header.js"></script>
+  <script type="application/javascript;version=1.8"
+    src="chrome://ubiquity/content/tutorial.js"></script>
 </head>
 <body dir="&locale.dir;">
-
 <div class="head">&ubiquity.tagline.About;</div>
 
 <div id="nav-container"></div>
@@ -76,6 +76,5 @@
 </div>
 
 <br clear="all" />
-
 </body>
 </html>
