PrefKeys: Quick styling fix.

--- a/ubiquity/chrome/content/settings.xhtml
+++ b/ubiquity/chrome/content/settings.xhtml
@@ -20,8 +20,7 @@
   <link rel="stylesheet" type="text/css" media="all" href="web-content.css" />
 
   <script src="resource://ubiquity/scripts/jquery.js"></script>
-  <script type="application/javascript;version=1.8" src="chrome://ubiquity/content/header.js"></script>
-
+  <script type="application/javascript;version=1.8" src="header.js"></script>
   <script type="application/javascript;version=1.8" src="settings.js"></script>
 
   <style>
@@ -29,7 +28,7 @@
       width: 740px; padding: 5px; border: 1px solid #F09B9A;
       background-color: #FFFCBA;
     }
-    .prefkeys { width: 88%; cursor: pointer; padding: 1px 1ex }
+    .prefkeys { width: 88%; cursor: pointer; padding: 1px 0.5em }
   </style>
 </head>
 <body dir="&locale.dir;">
