web-content: Removed some inline styles and trailing spaces.

--- a/ubiquity/chrome/content/about.xhtml
+++ b/ubiquity/chrome/content/about.xhtml
@@ -33,7 +33,7 @@
 
 <br clear="all" />
 
-<div style="text-align:center;" class="not-the-tutorial">
+<div class="page-tip not-the-tutorial">
   <p>&ubiquity.pagetip.About;</p>
 </div>
 
