--- a/ubiquity/chrome/content/cmdlist.xhtml
+++ b/ubiquity/chrome/content/cmdlist.xhtml
@@ -33,7 +33,7 @@
 
 <br clear="all" />
 
-<div style="text-align:center;">
+<div class="page-tip">
   <p>&ubiquity.pagetip.YourCommands;</p>
   <p>&ubiquity.commandlist.SubscriptionDetails;</p>
 </div>
