--- a/ubiquity/index.html
+++ b/ubiquity/index.html
@@ -46,6 +46,8 @@
            href="#modules/parser/new/parser.js">Parser 2</a></li>
     <li><a class="intra-wiki"
            href="#modules/nountypes.js">Built-in Noun Types</a></li>
+    <li><a class="intra-wiki"
+           href="#modules/suggestion_memory.js">SuggestionMemory</a></li>
   </ul>
   <p>We also have some of our standard feeds documented:</p>
   <ul>
