confirm-add-command: Prettified the code view.

--- a/ubiquity/chrome/content/confirm-add-command.xhtml
+++ b/ubiquity/chrome/content/confirm-add-command.xhtml
@@ -37,10 +37,10 @@
       <p>&ubiquity.confirmsubscription.ShortDesc;</p>
     </div>
 
-    <div id="errorLongDesc">
+    <div id="errorLongDesc" style="-moz-padding-end:0">
       <p>&ubiquity.confirmsubscription.ScriptSource;</p>
 
-      <div id="sourceCode" style="max-height: 40em; overflow: auto;">
+      <div id="sourceCode">
         <em>&ubiquity.confirmsubscription.WaitSourceLoading;</em>
       </div>
 
