Fixed "Yahoo!". Made "view selection source" work on frames/sidebar/etc.

--- a/ubiquity/standard-feeds/search.xhtml
+++ b/ubiquity/standard-feeds/search.xhtml
@@ -439,10 +439,9 @@ CmdUtils.makeSearchCommand({
       Utils.paramsToString({
         appid: ("wZ.3jHnV34GC4QakIuzfgHTGiU..1SfNPw" +
                 "PAuasmt.L5ytoIPOuZAdP1txE4s6KfRBp9"),
-        query: "%s",
         results: 6,
         output: "json",
-      })),
+      }, "?query=%s&")),
     type: "json",
     container: "ResultSet.Result",
     href: "Url",
