Added SkinFeedPlugin in place of SkinSvc, simplifying things greatly.

--- a/ubiquity/index.html
+++ b/ubiquity/index.html
@@ -43,6 +43,8 @@
            href="#modules/locked_down_feed_plugin.js">Locked-Down Feed
            Plugin</a></li>
     <li><a class="intra-wiki"
+           href="#modules/skin_feed_plugin.js">SkinFeedPlugin</a></li>
+    <li><a class="intra-wiki"
            href="#modules/parser/new/parser.js">Parser 2</a></li>
     <li><a class="intra-wiki"
            href="#modules/nountypes.js">Built-in Noun Types</a></li>
